new header logic and breaking classes changes

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Example 1</title>
+  <link rel="stylesheet" href="../src/react-pure-modal.css">
 </head>
 <body>
   <div id="js--modals"></div>
