--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,14 @@
   <title></title>
   <title>Example 1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .button {
+      padding: 10px 15px;
+      background-color: #ffd34f;
+      border: none;
+      margin: 20px;
+    }
+  </style>
 </head>
 <body>
   <div id="js--modals"></div>
