fix bug scroll body with open popup in iphone

--- a/example/index.html
+++ b/example/index.html
@@ -18,5 +18,58 @@
 <body>
   <div id="js--modals"></div>
   <script src="../example/example.min.js"></script>
+  <div>
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+    more test text <br />
+  </div>
 </body>
 </html>
