added additional id for portals

--- a/example/index.html
+++ b/example/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
   <div id="js--modals"></div>
+  <div id="portal"></div>
   <script src="../example/example.min.js"></script>
 </body>
 </html>
