--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="height: 150vh">
     <div id="js--modals"></div>
     <script src="./example/example.min.js"></script>
   </body>
